# haskell-do

./: .atom-build.yml  .gitignore  .psc-ide-port  .travis.yml  Build.hs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  NOTICE  README.md  client-stack.yaml  haskell-do.cabal  makefile  package.yaml  server-stack.yaml  stack.yaml  tmp.hs
common/HaskellDo/: Main.hs
core/: Lib.hs  haskelldo-core.cabal
core/HaskellDo/: Lib.hs
core/app/: Interpreter.hs  Main.hs  Types.hs  Utils.hs  WebSocketServer.hs
ghc-specific/HaskellDo/: Utils.hs
ghcjs-specific/HaskellDo/: Utils.hs
gui/: Lib.hs  bower.json  package.json
gui/HaskellDo/: Lib.hs
gui/src/: Main.purs
gui/src/App/: State.purs  Types.purs  View.purs
gui/src/BackendConnection/: State.purs  Types.purs
gui/src/Bootstrap/: DropdownMenu.purs  TopFixedNavbar.purs
gui/src/Cells/: Foreign.js  Foreign.purs  State.purs  Types.purs  View.purs
gui/src/Columns/: Types.purs  View.purs
gui/src/Console/: Foreign.js  Foreign.purs  State.purs  Types.purs  View.purs
gui/src/Notebook/: Packer.purs  Types.purs
gui/test/: Main.purs
orchestrator/HaskellDo/: Orchestrator.hs
src/: HaskellDo.hs  Main.hs  Ulmus.hs
src/HaskellDo/: State.hs  Types.hs  View.hs
src/HaskellDo/Common/: Types.hs
src/HaskellDo/Core/: Compilation.hs
src/HaskellDo/GUI/: SimpleMDE.hs  Types.hs  (+1 more)
src/common/: HaskellDo.hs  Main.hs  Ulmus.hs
src/docker/: Dockerfile  setup.sh
src/ghc-specific/: AxiomUtils.hs
src/ghcjs-specific/: AxiomUtils.hs
static/out.jsexe/: index.html
test/: Spec.hs
veilig-core/: README.md  stack.yaml  veilig-core.cabal
veilig-core/app/: Interpreter.hs  Main.hs  Types.hs  Utils.hs  WebSocketServer.hs  WebsocketServer.hs
veilig-gui/: bower.json  package.json
veilig-gui/src/: Main.purs  State.js  State.purs  Types.purs  UIUtils.purs  View.purs
(+66 files in other folders)
