name:                haskelldo-core
version:             0.1.0.0
synopsis:            The core server of HaskellDO
description:         Please see README.md
homepage:            https://github.com/theam/haskelldo#readme
license:             Apache-2.0
license-file:        ../LICENSE
author:              HaskellDO contributors
maintainer:          nikita@theam.io
copyright:           2017 HaskellDO contributors
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskelldo-core
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , websockets
                     , text
                     , aeson
                     , split
                     , string-conversions
                     , directory
                     , bytestring
                     , mtl
                     , filepath
                     , stm
                     , process
                     , ghc-mod
                     , wai
                     , warp
                     , wai-websockets
                     , servant-server
                     , directory
  other-modules:       WebSocketServer
                     , Types
                     , Interpreter
                     , Utils
  default-language:    Haskell2010

test-suite haskelldo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theam/haskelldo
